[FIX] website_quote: fix xpath in sale_order_templates.xml
Because if you want to rewrite template and you change 'fiscal_position_remark' variable in xml  structure

--- a/addons/website_quote/report/sale_order_templates.xml
+++ b/addons/website_quote/report/sale_order_templates.xml
@@ -7,7 +7,7 @@
             <p t-field="doc.validity_date"/>
         </div>
     </xpath>
-    <xpath expr="//div[@class='page']/p[@id='fiscal_position_remark']" position="after">
+    <xpath expr="//div[@class='page']//p[@id='fiscal_position_remark']" position="after">
         <div t-if="doc.options and doc.state in ['draft', 'sent']" style="page-break-before:always;">
             <h2>
                 <span>Suggested Products</span>
